--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "react": "^18.3.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2",
-    "tailwindcss": "^4.1.9"
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
