--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@google/genai": "^1.6.0",
+    "@google/generative-ai": "^0.24.1",
     "body-parser": "^2.2.0",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
