--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@google/genai": "^1.6.0",
     "@google/generative-ai": "^0.24.1",
     "body-parser": "^2.2.0",
     "connect-mongo": "^5.1.0",
@@ -19,6 +18,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "helmet": "^8.1.0",
+    "marked": "^15.0.12",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "nodemon": "^3.1.10",
